# rpi-camera

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-product-app.yaml  deploy-video-service.yaml  main.yaml
app/: Makefile  README.md  docker-compose.yaml  pyproject.toml
app/deploy/: Dockerfile
app/src/rpi_camera/: main.py
app/src/rpi_camera/clients/: aws_s3_client.py
app/src/rpi_camera/logger/: logger.py
app/src/rpi_camera/routes/: routes.py
app/src/rpi_camera/routes/health_check/: controller.py
app/src/rpi_camera/routes/videos/: controller.py
app/src/rpi_camera/video_operations/: rpi_camera.py  streaming_output.py
apps/product-app/: next.config.ts  package.json  pnpm-lock.yaml
apps/product-app/deploy/: Dockerfile
apps/rpi-camera-software/: Makefile  README.md  pyproject.toml
apps/rpi-camera-software/energy_consumption/: energy_consumption_pi.md  low_power_mode.sh
apps/rpi-camera-software/src/: main.py  terminal_main.py
apps/rpi-camera-software/src/battery/: battery_factory.py  battery_manager.py  pijuice_battery.py  stub_battery.py  stub_battery_manager.py
apps/rpi-camera-software/src/battery_manager/: battery_manager.py
apps/rpi-camera-software/src/camera/: camera.py  camera_factory.py  raspberrypi_camera.py  stub_camera.py
apps/rpi-camera-software/src/device/: device.py
apps/rpi-camera-software/src/device_health_checker/: device_health_checker.py
apps/rpi-camera-software/src/mqtt_topics_manager/: base_topic_handler.py  battery_info_topic_handler.py  camera_control_topic_handler.py  device_control_topic_handler.py  device_health_check_topic_handler.py  mqtt_topics_manager.py  rpi_camera_control_topic_handler.py
apps/rpi-camera-software/src/terminal/: terminal_controller.py
apps/rpi-camera-software/src/webrtc/: webrtc_streamer.py
apps/shared/: pyproject.toml
apps/shared/shared/clients/: aws_iot_client.py  aws_mqtt_client.py  aws_s3_client.py
apps/shared/shared/http/: response.py
apps/shared/shared/models/: api_response.py  battery_info_event.py  battery_metrics.py  camera_control_event.py  device_control_event.py  device_health_check_event.py  device_metrics.py  generic_request_event.py
apps/shared/shared/mqtt/: mqtt_clients.py  mqtt_topics.py
apps/video-service-web/: Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
apps/video-service-web/scripts/: create_jwt.py
apps/video-service-web/src/: main.py
apps/video-service-web/src/auth/: dependencies.py
apps/video-service-web/src/database/: config.py  database.py  session.py
apps/video-service-web/src/database/managers/: device_manager.py
apps/video-service-web/src/database/migrations/: env.py
apps/video-service-web/src/database/migrations/versions/: 453bfe4a0810_create_device_table.py
apps/video-service-web/src/database/models/: device.py
apps/video-service-web/src/ffmpeg/: ffmpeg_service.py
apps/video-service-web/src/mqtt_rpc_client/: mqtt_rpc_client.py
apps/video-service-web/src/routes/: routes.py
apps/video-service-web/src/routes/battery/: controller.py
apps/video-service-web/src/routes/device/: controller.py
apps/video-service-web/src/routes/health_check/: controller.py
apps/video-service-web/src/routes/videos/: controller.py
apps/video-service-web/src/video_service_web/: main.py
apps/video-service-web/src/video_service_web/clients/: aws_mqtt_client.py  topics.py
apps/video-service-web/src/video_service_web/mqtt/: mqtt_clients.py  topics.py
apps/video-service-web/src/video_service_web/mqtt_topics/: mqtt_topics_manager.py
apps/video-service-web/src/video_service_web/routes/videos/: controller.py
apps/video-service-web/src/video_service_web/utils/: base64.py
deploy/: Dockerfile
infra/ansible-configurations/: .gitignore  README.md  ansible_script.md  run-playbook.sh  secrets.example.yml  secrets.yml.j2  update-secrets.sh
infra/ansible-configurations/inventory/: all.yml
infra/ansible-configurations/playbooks/: bootstrap_device.yml  install-all.yml  playbook.yml  seed_vault.yml  start_camera_server.yml  start_local_camera_server.yml  start_reverse_tunnel.yml
infra/full-install-script/: install.sh
infra/hardware/: README.md
infra/os-setup/: README.md
infra/terraform/: backend.tf  create-ssl-credentials.sh  create-ssl-credentials_rpi_camera_4b.sh  create-ssl-credentials_video_service_web.sh  data.tf  main.tf  outputs.tf  reverse-proxy.tf  terraform.tfvars  variables.tf
rpi-camera-software/: Makefile  README.md  pyproject.toml
rpi-camera-software/src/rpi_camera/: main.py  mqtt_main.py  terminal_main.py  video_test.py
rpi-camera-software/src/rpi_camera/battery_manager/: battery_manager.py
rpi-camera-software/src/rpi_camera/clients/: aws_mqtt_client.py  aws_s3_client.py
rpi-camera-software/src/rpi_camera/models/: battery_info_event.py  camera_control_event.py
rpi-camera-software/src/rpi_camera/mqtt/: battery_info_topic_handler.py  mqtt_clients.py  rpi_camera_control_topic_handler.py  topics.py
rpi-camera-software/src/rpi_camera/mqtt_topics_manager/: mqtt_topics_manager.py
rpi-camera-software/src/rpi_camera/pijuice_battery/: pijuice_battery.py
rpi-camera-software/src/rpi_camera/routes/videos/: controller.py
rpi-camera-software/src/rpi_camera/terminal/: terminal_controller.py
rpi-camera-software/src/rpi_camera/video_operations/: rpi_camera.py
rpi-camera-software/src/rpi_camera/webrtc/: webrtc_streamer.py
video-service-web/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
video-service-web/deploy/: Dockerfile
video-service-web/src/video_service_web/: main.py
video-service-web/src/video_service_web/clients/: aws_mqtt_client.py
video-service-web/src/video_service_web/ffmpeg/: ffmpeg_service.py
video-service-web/src/video_service_web/models/: camera_control_event.py  video_event.py
video-service-web/src/video_service_web/mqtt_topics/: mqtt_topics_manager.py
video-service-web/src/video_service_web/routes/: routes.py
video-service-web/src/video_service_web/routes/videos/: controller.py
(+19 files in other folders)
