[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared python packages"
authors = ["Viktor Vasylkovskyi <viktor.vasylkovskyi@gmail.com>"]
packages = [{ include = "shared" }]

[tool.poetry.dependencies]
python        = "3.11.2"
awsiotsdk     = "1.24.0"
boto3         = "^1.34.113"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"