[tool.poetry]
authors     = ["Viktor Vasylkovskyi <viktor.vasylkovskyi@gmail.com>"]
description = "Video Service Web API for RPI Camera"
homepage    = "https://github.com/vvasylkovskyi/rpi-camera"
maintainers = ["Viktor Vasylkovskyi <viktor.vasylkovskyi@gmail.com>"]
name        = "video-service-web"
packages    = [{ include = "src" }]
readme      = "README.md"
repository  = "https://github.com/vvasylkovskyi/rpi-camera"
version     = "0.0.0"


[tool.poetry.dependencies]
awsiotsdk     = "1.24.0"
fastapi       = ">=0.109.0"
ffmpeg-python = "^0.2.0"
python        = "3.11.2"
python-dotenv = "^1.0.1"
uvicorn       = ">=0.26.0"
pydantic      = "2.11.7"
PyJWT         = "^2.8.0"
cryptography  = "45.0.6"
requests      = "2.32.4"

shared = { path = "./shared", develop = true }

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.374"
ruff    = "^0.5.5"

[tool.ruff]
fix            = true
line-length    = 120
src            = ["src", "tests"]
target-version = "py311"

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]


[tool.ruff.format]
indent-style              = "space"
line-ending               = "lf"
quote-style               = "double"
skip-magic-trailing-comma = true

[tool.pyright]
exclude  = ["**/__pycache__"]
ignore   = []
include  = ["src"]
strict   = []
venvPath = ".venv"

reportMissingImports           = true
reportMissingTypeStubs         = false
reportUnknownParameterType     = true
reportUntypedFunctionDecorator = true
